alex_demo/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WHILE
    FOR
    FOREACH

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     start -> function
Rule 3     function -> ID LPAREN STRING RPAREN
Rule 4     function -> ID LPAREN expression RPAREN
Rule 5     statement -> ID ASSIGN expression
Rule 6     statement -> expression EQUALS expression
Rule 7     statement -> IF expression DO expression ELSE expression
Rule 8     statement -> expression
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression MULTIPLY expression
Rule 12    expression -> expression DIVIDE expression
Rule 13    expression -> expression POW expression
Rule 14    expression -> expression MOD expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> expression XOR expression
Rule 18    expression -> NOT expression
Rule 19    expression -> TRUE
Rule 20    expression -> FALSE
Rule 21    expression -> MINUS expression
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> NUMBER
Rule 24    expression -> ID

Terminals, with rules where they appear

AND                  : 15
ASSIGN               : 5
DIVIDE               : 12
DO                   : 7
ELSE                 : 7
EQUALS               : 6
FALSE                : 20
FOR                  : 
FOREACH              : 
ID                   : 3 4 5 24
IF                   : 7
LPAREN               : 3 4 22
MINUS                : 10 21
MOD                  : 14
MULTIPLY             : 11
NOT                  : 18
NUMBER               : 23
OR                   : 16
PLUS                 : 9
POW                  : 13
RPAREN               : 3 4 22
STRING               : 3
TRUE                 : 19
WHILE                : 
XOR                  : 17
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 6 7 7 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 21 22
function             : 2
start                : 0
statement            : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (2) start -> . function
    (5) statement -> . ID ASSIGN expression
    (6) statement -> . expression EQUALS expression
    (7) statement -> . IF expression DO expression ELSE expression
    (8) statement -> . expression
    (3) function -> . ID LPAREN STRING RPAREN
    (4) function -> . ID LPAREN expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    ID              shift and go to state 8
    IF              shift and go to state 9
    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1

    function                       shift and go to state 6
    start                          shift and go to state 4
    expression                     shift and go to state 12
    statement                      shift and go to state 5

state 1

    (23) expression -> NUMBER .

    PLUS            reduce using rule 23 (expression -> NUMBER .)
    MINUS           reduce using rule 23 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 23 (expression -> NUMBER .)
    DIVIDE          reduce using rule 23 (expression -> NUMBER .)
    POW             reduce using rule 23 (expression -> NUMBER .)
    MOD             reduce using rule 23 (expression -> NUMBER .)
    AND             reduce using rule 23 (expression -> NUMBER .)
    OR              reduce using rule 23 (expression -> NUMBER .)
    XOR             reduce using rule 23 (expression -> NUMBER .)
    EQUALS          reduce using rule 23 (expression -> NUMBER .)
    $end            reduce using rule 23 (expression -> NUMBER .)
    RPAREN          reduce using rule 23 (expression -> NUMBER .)
    DO              reduce using rule 23 (expression -> NUMBER .)
    ELSE            reduce using rule 23 (expression -> NUMBER .)


state 2

    (19) expression -> TRUE .

    PLUS            reduce using rule 19 (expression -> TRUE .)
    MINUS           reduce using rule 19 (expression -> TRUE .)
    MULTIPLY        reduce using rule 19 (expression -> TRUE .)
    DIVIDE          reduce using rule 19 (expression -> TRUE .)
    POW             reduce using rule 19 (expression -> TRUE .)
    MOD             reduce using rule 19 (expression -> TRUE .)
    AND             reduce using rule 19 (expression -> TRUE .)
    OR              reduce using rule 19 (expression -> TRUE .)
    XOR             reduce using rule 19 (expression -> TRUE .)
    EQUALS          reduce using rule 19 (expression -> TRUE .)
    $end            reduce using rule 19 (expression -> TRUE .)
    RPAREN          reduce using rule 19 (expression -> TRUE .)
    DO              reduce using rule 19 (expression -> TRUE .)
    ELSE            reduce using rule 19 (expression -> TRUE .)


state 3

    (21) expression -> MINUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 14

state 4

    (0) S' -> start .



state 5

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 6

    (2) start -> function .

    $end            reduce using rule 2 (start -> function .)


state 7

    (22) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 15

state 8

    (5) statement -> ID . ASSIGN expression
    (3) function -> ID . LPAREN STRING RPAREN
    (4) function -> ID . LPAREN expression RPAREN
    (24) expression -> ID .

    ASSIGN          shift and go to state 16
    LPAREN          shift and go to state 17
    EQUALS          reduce using rule 24 (expression -> ID .)
    PLUS            reduce using rule 24 (expression -> ID .)
    MINUS           reduce using rule 24 (expression -> ID .)
    MULTIPLY        reduce using rule 24 (expression -> ID .)
    DIVIDE          reduce using rule 24 (expression -> ID .)
    POW             reduce using rule 24 (expression -> ID .)
    MOD             reduce using rule 24 (expression -> ID .)
    AND             reduce using rule 24 (expression -> ID .)
    OR              reduce using rule 24 (expression -> ID .)
    XOR             reduce using rule 24 (expression -> ID .)
    $end            reduce using rule 24 (expression -> ID .)


state 9

    (7) statement -> IF . expression DO expression ELSE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 18

state 10

    (20) expression -> FALSE .

    PLUS            reduce using rule 20 (expression -> FALSE .)
    MINUS           reduce using rule 20 (expression -> FALSE .)
    MULTIPLY        reduce using rule 20 (expression -> FALSE .)
    DIVIDE          reduce using rule 20 (expression -> FALSE .)
    POW             reduce using rule 20 (expression -> FALSE .)
    MOD             reduce using rule 20 (expression -> FALSE .)
    AND             reduce using rule 20 (expression -> FALSE .)
    OR              reduce using rule 20 (expression -> FALSE .)
    XOR             reduce using rule 20 (expression -> FALSE .)
    EQUALS          reduce using rule 20 (expression -> FALSE .)
    $end            reduce using rule 20 (expression -> FALSE .)
    RPAREN          reduce using rule 20 (expression -> FALSE .)
    DO              reduce using rule 20 (expression -> FALSE .)
    ELSE            reduce using rule 20 (expression -> FALSE .)


state 11

    (18) expression -> NOT . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 19

state 12

    (6) statement -> expression . EQUALS expression
    (8) statement -> expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULTIPLY expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POW expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . XOR expression

    EQUALS          shift and go to state 24
    $end            reduce using rule 8 (statement -> expression .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 28
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 22
    POW             shift and go to state 23
    MOD             shift and go to state 29
    AND             shift and go to state 20
    OR              shift and go to state 25
    XOR             shift and go to state 21


state 13

    (24) expression -> ID .

    PLUS            reduce using rule 24 (expression -> ID .)
    MINUS           reduce using rule 24 (expression -> ID .)
    MULTIPLY        reduce using rule 24 (expression -> ID .)
    DIVIDE          reduce using rule 24 (expression -> ID .)
    POW             reduce using rule 24 (expression -> ID .)
    MOD             reduce using rule 24 (expression -> ID .)
    AND             reduce using rule 24 (expression -> ID .)
    OR              reduce using rule 24 (expression -> ID .)
    XOR             reduce using rule 24 (expression -> ID .)
    EQUALS          reduce using rule 24 (expression -> ID .)
    $end            reduce using rule 24 (expression -> ID .)
    RPAREN          reduce using rule 24 (expression -> ID .)
    DO              reduce using rule 24 (expression -> ID .)
    ELSE            reduce using rule 24 (expression -> ID .)


state 14

    (21) expression -> MINUS expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULTIPLY expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POW expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . XOR expression

    PLUS            reduce using rule 21 (expression -> MINUS expression .)
    MINUS           reduce using rule 21 (expression -> MINUS expression .)
    MULTIPLY        reduce using rule 21 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 21 (expression -> MINUS expression .)
    MOD             reduce using rule 21 (expression -> MINUS expression .)
    AND             reduce using rule 21 (expression -> MINUS expression .)
    OR              reduce using rule 21 (expression -> MINUS expression .)
    XOR             reduce using rule 21 (expression -> MINUS expression .)
    EQUALS          reduce using rule 21 (expression -> MINUS expression .)
    $end            reduce using rule 21 (expression -> MINUS expression .)
    RPAREN          reduce using rule 21 (expression -> MINUS expression .)
    DO              reduce using rule 21 (expression -> MINUS expression .)
    ELSE            reduce using rule 21 (expression -> MINUS expression .)
    POW             shift and go to state 23

  ! POW             [ reduce using rule 21 (expression -> MINUS expression .) ]
  ! PLUS            [ shift and go to state 26 ]
  ! MINUS           [ shift and go to state 28 ]
  ! MULTIPLY        [ shift and go to state 27 ]
  ! DIVIDE          [ shift and go to state 22 ]
  ! MOD             [ shift and go to state 29 ]
  ! AND             [ shift and go to state 20 ]
  ! OR              [ shift and go to state 25 ]
  ! XOR             [ shift and go to state 21 ]


state 15

    (22) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULTIPLY expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POW expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . XOR expression

    RPAREN          shift and go to state 30
    PLUS            shift and go to state 26
    MINUS           shift and go to state 28
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 22
    POW             shift and go to state 23
    MOD             shift and go to state 29
    AND             shift and go to state 20
    OR              shift and go to state 25
    XOR             shift and go to state 21


state 16

    (5) statement -> ID ASSIGN . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 31

state 17

    (3) function -> ID LPAREN . STRING RPAREN
    (4) function -> ID LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    STRING          shift and go to state 32
    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 33

state 18

    (7) statement -> IF expression . DO expression ELSE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULTIPLY expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POW expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . XOR expression

    DO              shift and go to state 34
    PLUS            shift and go to state 26
    MINUS           shift and go to state 28
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 22
    POW             shift and go to state 23
    MOD             shift and go to state 29
    AND             shift and go to state 20
    OR              shift and go to state 25
    XOR             shift and go to state 21


state 19

    (18) expression -> NOT expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULTIPLY expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POW expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . XOR expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for POW resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for XOR resolved as shift
    EQUALS          reduce using rule 18 (expression -> NOT expression .)
    $end            reduce using rule 18 (expression -> NOT expression .)
    RPAREN          reduce using rule 18 (expression -> NOT expression .)
    DO              reduce using rule 18 (expression -> NOT expression .)
    ELSE            reduce using rule 18 (expression -> NOT expression .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 28
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 22
    POW             shift and go to state 23
    MOD             shift and go to state 29
    AND             shift and go to state 20
    OR              shift and go to state 25
    XOR             shift and go to state 21

  ! PLUS            [ reduce using rule 18 (expression -> NOT expression .) ]
  ! MINUS           [ reduce using rule 18 (expression -> NOT expression .) ]
  ! MULTIPLY        [ reduce using rule 18 (expression -> NOT expression .) ]
  ! DIVIDE          [ reduce using rule 18 (expression -> NOT expression .) ]
  ! POW             [ reduce using rule 18 (expression -> NOT expression .) ]
  ! MOD             [ reduce using rule 18 (expression -> NOT expression .) ]
  ! AND             [ reduce using rule 18 (expression -> NOT expression .) ]
  ! OR              [ reduce using rule 18 (expression -> NOT expression .) ]
  ! XOR             [ reduce using rule 18 (expression -> NOT expression .) ]


state 20

    (15) expression -> expression AND . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 35

state 21

    (17) expression -> expression XOR . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 36

state 22

    (12) expression -> expression DIVIDE . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID

    NOT             shift and go to state 11
    TRUE            shift and go to state 2
    FALSE           shift and go to state 10
    MINUS           shift and go to state 3
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    ID              shift and go to state 13

    expression                     shift and go to state 37

state 23

    (13) expression -> expression POW . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULTIPLY expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POW expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression XOR expression
    (18) expression -> . NOT expression
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . ID
